back button minus logic

--- a/quiz.html
+++ b/quiz.html
@@ -13,7 +13,7 @@
 
     <!--actual html-->
     <div class="main">
-        <h1>Think you know India well?</h1>
+        <h1>Take the desh bhakt quiz</h1>
         <div class = "quiz_start">
             <div class="quiz_q_and_a">
                 <p class="questions"> Question: </p>
@@ -29,7 +29,10 @@
                 </form>
                 <br><br>
             </div>
-            <a href="#" class="quiz_button">Beqin Quiz!</a>
+            <div class="button_container">
+                <a href="#" class="quiz_back_button">Back</a>
+                <a href="#" class="quiz_button">Begin</a>
+            </div>
         </div>
         <p class="results"> Final score </p>
     </div>
